# SPDX-FileCopyrightText: 2024-2026 Cloudflare Inc. and contributors
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "moq-auth-cat"
description = "C4M (CAT for MoQ) authentication hook for MoQ relay"
authors = ["moq-rs contributors"]
repository = "https://github.com/cloudflare/moq-rs"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

keywords = ["quic", "moq", "auth", "cat", "c4m"]
categories = ["authentication", "network-programming"]

[dependencies]
moq-auth = { path = "../moq-auth", version = "0.1" }
moq-transport = { path = "../moq-transport", version = "0.14" }
cat-token = { path = "../../cat.rs" }
async-trait = "0.1"
bytes = "1"
anyhow = "1"
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
